--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -19,6 +19,6 @@
 // Blog
 .blog-header {
 	.header-nav {
-		padding: 1.5rem 0 1rem 0;
+		padding: 1.5rem 0 1rem 10rem;
 	}
 }
